SERVER-32592 Ignore stepdown errors in MigrationSourceManager::cleanupOnError